Changing the way tests bootstrap is made, so there's a valid reference to jQuery and window objects.  Adding a simple ajax request test using Sinon to simulate the success call after using BaseProxy.makeAjaxRequest.

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "grunt-mocha": "~0.4.15",
     "jquery": "~2.1.4",
     "jsdom": "~3.1.2",
-    "async": "~1.5.1"
+    "async": "~1.5.1",
+    "sinon-chai": "~2.8.0"
   }
 }
