--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "ju-shared",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Object Oriented and common Javascript utilities",
   "main": " ",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
