--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
@@ -19,16 +19,18 @@
     "url": "https://github.com/hulilabs/ju-shared/issues"
   },
   "devDependencies": {
-    "mocha": "~2.3.4",
+    "async": "~1.5.1",
     "chai": "~3.4.1",
-    "requirejs": "~2.1.22",
-    "sinon": "~1.17.2",
-    "grunt-cli": "~0.1.13",
     "grunt": "~0.4.5",
-    "grunt-mocha": "~0.4.15",
+    "grunt-cli": "~0.1.13",
+    "grunt-jscs": "^2.7.0",
+    "grunt-mocha-test": "^0.12.7",
+    "grunt-newer": "^1.1.2",
     "jquery": "~2.1.4",
     "jsdom": "~3.1.2",
-    "async": "~1.5.1",
+    "mocha": "~2.3.4",
+    "requirejs": "~2.1.22",
+    "sinon": "~1.17.2",
     "sinon-chai": "~2.8.0"
   }
 }
